--- a/src/components/Cursor/Cursor.module.css
+++ b/src/components/Cursor/Cursor.module.css
@@ -1,7 +1,10 @@
 .cursor {
+  z-index: 1000;
+  pointer-events: none;
   height: 30px;
   width: 30px;
   border-radius: 50%;
   position: fixed;
+  top: 0;
   left: 0;
 }
