--- a/src/components/Educ/Educ.module.css
+++ b/src/components/Educ/Educ.module.css
@@ -7,3 +7,11 @@
   left: calc(50%-1px);
   top: 6px
 }
+
+@media(max-width: 767px){
+  .timelineItems::before{
+  left: 0.5rem;
+  margin-top: 1.25rem;
+  height: calc(100% - 1.25rem - 6px);
+  }
+}
